--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8080
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/jb_flight_reservation
+spring.datasource.username=root
+spring.datasource.password=asas4041
 
+mybatis.mapper-locations=/mappers/*.xml
+mybatis.type-aliases-package=com.joongbu.flight_reservation.dto
