--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port=8081
+server.port=8080
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/SPRING_BOARD
 spring.datasource.username=board_user
 spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=/mappers/*.xml
