--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+livereload.enabled=true 
+freemarker.cache=false
 server.port=8080
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/jb_flight_reservation
 spring.datasource.username=root
@@ -5,3 +7,4 @@ spring.datasource.password=00000000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=/mappers/*.xml
+mybatis.type-aliases-package=com.joongbu.flight_reservation.dto
