--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=/mappers/*.xml
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=otpcapstone6@gmail.com
+spring.mail.password=huranoxbyilklwae
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
