--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=/mappers/*.xml
 
+#java MailSender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=otpcapstone6@gmail.com
 spring.mail.password=huranoxbyilklwae
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
