--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,13 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.0.1.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.4.5</version>
+		</dependency>
 
-		 
+
 	</dependencies>
 
 	<build>
