회원가입 pw 암호화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 mybatis.type-aliases-package=com.joongbu.flight_reservation.dto
+
+#회원가입 - 비밀번호 암호화
+mybatis.configuration.map-underscore-to-camel-case=true
