--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,17 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.0.1.RELEASE</version>
 		</dependency>
+		
+		<!--비밀번호 암호화 스프링 시큐리티(Spring Security) -->
+		  <dependency>
+			  <groupId>org.springframework.boot</groupId>
+			  <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			  <groupId>org.springframework.security</groupId>
+			  <artifactId>spring-security-test</artifactId>
+		  <scope>test</scope>
+		</dependency>
 
 		 
 	</dependencies>
