--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,12 @@
 			  <artifactId>spring-security-test</artifactId>
 		  <scope>test</scope>
 		</dependency>
-
+		<!-- 페이징 -->
+		<dependency>
+		    <groupId>com.github.pagehelper</groupId>
+		    <artifactId>pagehelper-spring-boot-starter</artifactId>
+		    <version>1.4.5</version>
+		</dependency>
 		 
 	</dependencies>
 
