--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ livereload.enabled=true
 freemarker.cache=false
 server.port=8080
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/jb_flight_reservation
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=asas4041
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=/mappers/*.xml
@@ -19,3 +19,7 @@ mybatis.type-aliases-package=com.joongbu.flight_reservation.dto
 
 #회원가입 - 비밀번호 암호화
 mybatis.configuration.map-underscore-to-camel-case=true
+
+#페이징
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
