--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,12 @@
 		    <artifactId>pagehelper-spring-boot-starter</artifactId>
 		    <version>1.4.5</version>
 		</dependency>
-		 
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom2</artifactId>
+			<version>2.0.6</version>
+		</dependency>
+
 
 	</dependencies>
 
