--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ freemarker.cache=false
 server.port=8080
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/jb_flight_reservation
 
-spring.datasource.username=board_user
-spring.datasource.password=1234
+spring.datasource.username=root
+spring.datasource.password=00000000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+allowMultiQueries=true
 mybatis.mapper-locations=/mappers/*.xml
 
 #java MailSender
