--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,7 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/jb_flight_reserv
 
 spring.datasource.username=root
 
-spring.datasource.password=mysql
-
-
+spring.datasource.password=0000
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
